--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                 </div>
                 <div class="About-col-2">
                     <h1 class="sub-title">  About me</h1>
-                    <p>I am Aman Jaiswal, a driven and curious individual with a strong foundation in technology and innovation. With a keen interest in Artificial Intelligence and Machine Learning, I’m continually expanding my skills in this field, working on projects that push the boundaries of what AI can achieve I am passionate about blending technology with real-world applications, always eager to learn, collaborate, and create impactful solutions that contribute positively to society.</P>
+                    <p>FRONTED DEVELOPER</p>
+                   <h1> I am Aman Jaiswal, a driven and curious individual with a strong foundation in technology and innovation. With a keen interest in Artificial Intelligence and Machine Learning, I’m continually expanding my skills in this field, working on projects that push the boundaries of what AI can achieve I am passionate about blending technology with real-world applications, always eager to learn, collaborate, and create impactful solutions that contribute positively to society.</h1>
                     
                  <div class="tab-titles">
                 <p class="tap-links active-link "> Skills</p>
