--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </ul>
         </nav>
         <div class="header-text">
+            <P>FRONTEND DEVELOPER</P>
             <h1>Hi,<br> I'm <span> Aman </span>Jaiswal</h1>
         </div>
     </div>
@@ -36,8 +37,7 @@
                 </div>
                 <div class="About-col-2">
                     <h1 class="sub-title">  About me</h1>
-                    <p>FRONTED DEVELOPER</p>
-                   <h1> I am Aman Jaiswal, a driven and curious individual with a strong foundation in technology and innovation. With a keen interest in Artificial Intelligence and Machine Learning, I’m continually expanding my skills in this field, working on projects that push the boundaries of what AI can achieve I am passionate about blending technology with real-world applications, always eager to learn, collaborate, and create impactful solutions that contribute positively to society.</h1>
+                   <P> I am Aman Jaiswal, a driven and curious individual with a strong foundation in technology and innovation. With a keen interest in Artificial Intelligence and Machine Learning, I’m continually expanding my skills in this field, working on projects that push the boundaries of what AI can achieve I am passionate about blending technology with real-world applications, always eager to learn, collaborate, and create impactful solutions that contribute positively to society.</P>
                     
                  <div class="tab-titles">
                 <p class="tap-links active-link "> Skills</p>
