--- a/index.html
+++ b/index.html
@@ -84,7 +84,53 @@
                 <img src="project.jpg">
                 <div class="layer">
                     <h3>Object following bot</h3>
-                    <p>An object following robot is a robot that can track and follow an object in its field of view. Object following is a growing field in computer vision that involves both identifying and tracking an object. Object following robots can be used in many different applications</p>
+                    <p>1. Objective
+
+The bot is designed to detect and follow a specific object autonomously. This kind of bot can be used in various fields, such as robotics, surveillance, delivery systems, and more.
+
+2. Components
+
+Hardware:
+
+Microcontroller: Typically, an Arduino, Raspberry Pi, or ESP32 is used for processing.
+
+Motors and Wheels: Allows movement and turning based on object positioning.
+
+Camera: For visual tracking and object detection.
+
+Ultrasonic/Infrared Sensors: For obstacle avoidance and distance measurements.
+
+Power Supply: Usually a rechargeable battery to power all components.
+
+
+Software:
+
+Programming Languages: Python (if using Raspberry Pi), C++ (if using Arduino).
+
+Object Detection Models: OpenCV or machine learning models like YOLO, MobileNet, or TensorFlow Lite for real-time object tracking.
+
+Motor Control Algorithms: Code to control speed and direction based on object movement.
+
+
+
+3. Functionality
+
+Object Detection: The camera or sensors continuously capture images and analyze frames to identify the target object using trained algorithms.
+
+Object Tracking: Once the object is identified, the bot tracks its position (using coordinates) and adjusts its movement to follow it.
+
+Obstacle Avoidance: Sensors detect obstacles in the path, preventing collisions.
+
+Control Mechanism: Based on object distance and position, the bot adjusts speed and direction to keep the object in view.
+4. Applications
+1)Surveillance and Security: Following a person or an intruder in a designated area.
+2)Service Industry: For automated delivery bots, capable of following people or specific paths.
+3)Educational Projects: A valuable learning tool for understanding robotics, machine vision, and embedded systems.
+4)Healthcare: Assisting elderly or disabled individuals by carrying essentials and following them.
+
+5. Challenges
+Real-Time Processing: Requires efficient algorithms to detect and track in real-time.
+Battery Management: Ensuring the bot has sufficient power for longer durations.</p>
                 </div>
             </div>
         </div>
