--- a/index.html
+++ b/index.html
@@ -38,12 +38,30 @@
                 <div class="About-col-2">
                     <h1 class="sub-title">  About me</h1>
                    <P> I am Aman Jaiswal, a driven and curious individual with a strong foundation in technology and innovation. With a keen interest in Artificial Intelligence and Machine Learning, I’m continually expanding my skills in this field, working on projects that push the boundaries of what AI can achieve I am passionate about blending technology with real-world applications, always eager to learn, collaborate, and create impactful solutions that contribute positively to society.</P>
-                    
-                 <div class="tab-titles">
-                <p class="tap-links active-link "> Skills</p>
-                <p class="tap-links"> Experience</p>
-                <p class="tap-links"> Education</p>
-               </div>
+                   <div class="tab-titles">
+                    <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+                    <p class="tab-links" onclick="opentab('experience')">Experience</p>
+                    <p class="tab-links" onclick="opentab('education')">Education</p>
+                </div> 
+                   <div class="tab-contents active-tab" id="skills">
+                    <ul>
+                        <li><span>adding soon</span><</li>
+                        <li><span>adding soon</span><</li>
+                        <li><span>adding soon</span><</li>
+                    </ul>
+                </div>
+                <div class="tab-contents" id="experience">
+                    <ul>
+                        <li><span>adding soon</span></li>
+                        <li><span>adding soon</span>.</li>
+                        
+                    </ul>
+                </div>
+                <div class="tab-contents" id="education">
+                    <ul>
+                        <li><span>2023-ONGOING</span><br>SVNIT,SURAT</li>
+                        <li><span>2022</span><br>MUVNPS,CHAPDA.</li>
+                        <li><span>2020</span><br>MLZS,INDORE.</li> 
                 </div>
             </div>
         </div>
